// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should get answers round 1 quizrunstep on Get (next) 1`] = `
Object {
  "message": null,
  "previousStep": Object {
    "answeredBy": Array [],
    "answers": null,
    "question": Object {
      "answers": Array [
        Object {
          "answerId": 3,
          "correct": true,
          "searchField": "trueanswer 1",
          "text": "answer 1",
        },
        Object {
          "answerId": 4,
          "correct": false,
          "searchField": "falseanswer 2",
          "text": "answer 2",
        },
      ],
      "modifiedOn": Any<String>,
      "questionId": 2,
      "remark": "remark",
      "rounds": Array [
        Object {
          "modifiedOn": Any<String>,
          "questions": null,
          "remark": "remark",
          "roundId": 1,
          "searchField": Any<String>,
          "shortId": Any<String>,
          "theme": "theme",
          "title": "title",
        },
      ],
      "scoring": Object {
        "scoringId": 2,
        "timeLimitSeconds": 0,
        "timeScoringInterval": 0,
        "type": 1,
        "weightCorrectAnswer": 1,
        "weightNoAnswer": 0,
      },
      "searchField": Any<String>,
      "shortId": Any<String>,
      "title": "title",
      "type": 2,
    },
    "quiz": Object {
      "date": "2100-01-31T23:00:00",
      "location": "location",
      "maxSubscriptions": 20,
      "modifiedOn": Any<String>,
      "quizId": 1,
      "remark": "remark",
      "rounds": null,
      "searchField": Any<String>,
      "shortId": Any<String>,
      "status": 5,
      "subscriptions": null,
      "title": "title",
    },
    "quizRunStepId": 2,
    "round": Object {
      "modifiedOn": Any<String>,
      "questions": null,
      "remark": "remark",
      "roundId": 1,
      "searchField": Any<String>,
      "shortId": Any<String>,
      "theme": "theme",
      "title": "title",
    },
    "scores": null,
    "status": 1,
  },
  "status": 1,
  "step": Object {
    "answeredBy": null,
    "answers": Array [
      "answer 1",
      "answer 1",
    ],
    "question": null,
    "quiz": Object {
      "date": "2100-01-31T23:00:00",
      "location": "location",
      "maxSubscriptions": 20,
      "modifiedOn": Any<String>,
      "quizId": 1,
      "remark": "remark",
      "rounds": null,
      "searchField": Any<String>,
      "shortId": Any<String>,
      "status": 5,
      "subscriptions": null,
      "title": "title",
    },
    "quizRunStepId": 3,
    "round": Object {
      "modifiedOn": Any<String>,
      "questions": null,
      "remark": "remark",
      "roundId": 1,
      "searchField": Any<String>,
      "shortId": Any<String>,
      "theme": "theme",
      "title": "title",
    },
    "scores": null,
    "status": 2,
  },
}
`;

exports[`should get answers round 2 quizrunstep on Get (next) 1`] = `
Object {
  "message": null,
  "previousStep": Object {
    "answeredBy": Array [],
    "answers": null,
    "question": Object {
      "answers": Array [
        Object {
          "answerId": 7,
          "correct": true,
          "searchField": "trueanswer 1",
          "text": "answer 1",
        },
        Object {
          "answerId": 8,
          "correct": false,
          "searchField": "falseanswer 2",
          "text": "answer 2",
        },
      ],
      "modifiedOn": Any<String>,
      "questionId": 4,
      "remark": "remark",
      "rounds": Array [
        Object {
          "modifiedOn": Any<String>,
          "questions": null,
          "remark": "remark",
          "roundId": 2,
          "searchField": Any<String>,
          "shortId": Any<String>,
          "theme": "theme",
          "title": "title",
        },
      ],
      "scoring": Object {
        "scoringId": 4,
        "timeLimitSeconds": 0,
        "timeScoringInterval": 0,
        "type": 1,
        "weightCorrectAnswer": 1,
        "weightNoAnswer": 0,
      },
      "searchField": Any<String>,
      "shortId": Any<String>,
      "title": "title",
      "type": 2,
    },
    "quiz": Object {
      "date": "2100-01-31T23:00:00",
      "location": "location",
      "maxSubscriptions": 20,
      "modifiedOn": Any<String>,
      "quizId": 1,
      "remark": "remark",
      "rounds": null,
      "searchField": Any<String>,
      "shortId": Any<String>,
      "status": 5,
      "subscriptions": null,
      "title": "title",
    },
    "quizRunStepId": 6,
    "round": Object {
      "modifiedOn": Any<String>,
      "questions": null,
      "remark": "remark",
      "roundId": 2,
      "searchField": Any<String>,
      "shortId": Any<String>,
      "theme": "theme",
      "title": "title",
    },
    "scores": null,
    "status": 1,
  },
  "status": 1,
  "step": Object {
    "answeredBy": null,
    "answers": Array [
      "answer 1",
      "answer 1",
    ],
    "question": null,
    "quiz": Object {
      "date": "2100-01-31T23:00:00",
      "location": "location",
      "maxSubscriptions": 20,
      "modifiedOn": Any<String>,
      "quizId": 1,
      "remark": "remark",
      "rounds": null,
      "searchField": Any<String>,
      "shortId": Any<String>,
      "status": 5,
      "subscriptions": null,
      "title": "title",
    },
    "quizRunStepId": 7,
    "round": Object {
      "modifiedOn": Any<String>,
      "questions": null,
      "remark": "remark",
      "roundId": 2,
      "searchField": Any<String>,
      "shortId": Any<String>,
      "theme": "theme",
      "title": "title",
    },
    "scores": null,
    "status": 2,
  },
}
`;

exports[`should get null quizrunstep on Get (next) 1`] = `
Object {
  "message": null,
  "previousStep": Object {
    "answeredBy": Array [],
    "answers": Array [
      "answer 1",
      "answer 1",
    ],
    "question": null,
    "quiz": Object {
      "date": "2100-01-31T23:00:00",
      "location": "location",
      "maxSubscriptions": 20,
      "modifiedOn": Any<String>,
      "quizId": 1,
      "remark": "remark",
      "rounds": null,
      "searchField": Any<String>,
      "shortId": Any<String>,
      "status": 5,
      "subscriptions": null,
      "title": "title",
    },
    "quizRunStepId": 8,
    "round": Object {
      "modifiedOn": Any<String>,
      "questions": null,
      "remark": "remark",
      "roundId": 2,
      "searchField": Any<String>,
      "shortId": Any<String>,
      "theme": "theme",
      "title": "title",
    },
    "scores": Array [],
    "status": 3,
  },
  "status": 1,
  "step": Object {
    "answeredBy": null,
    "answers": null,
    "question": null,
    "quiz": Object {
      "date": "2100-01-31T23:00:00",
      "location": "location",
      "maxSubscriptions": 20,
      "modifiedOn": Any<String>,
      "quizId": 1,
      "remark": "remark",
      "rounds": null,
      "searchField": Any<String>,
      "shortId": Any<String>,
      "status": 5,
      "subscriptions": null,
      "title": "title",
    },
    "quizRunStepId": 9,
    "round": null,
    "scores": null,
    "status": 4,
  },
}
`;

exports[`should get question1 quizrunstep on Get (next) 1`] = `
Object {
  "message": null,
  "previousStep": null,
  "status": 1,
  "step": Object {
    "answeredBy": null,
    "answers": null,
    "question": Object {
      "answers": null,
      "modifiedOn": Any<String>,
      "questionId": 1,
      "remark": "remark",
      "rounds": Array [
        Object {
          "modifiedOn": Any<String>,
          "questions": null,
          "remark": "remark",
          "roundId": 1,
          "searchField": Any<String>,
          "shortId": Any<String>,
          "theme": "theme",
          "title": "title",
        },
      ],
      "scoring": Object {
        "scoringId": 1,
        "timeLimitSeconds": 0,
        "timeScoringInterval": 0,
        "type": 1,
        "weightCorrectAnswer": 1,
        "weightNoAnswer": 0,
      },
      "searchField": Any<String>,
      "shortId": Any<String>,
      "title": "title",
      "type": 2,
    },
    "quiz": Object {
      "date": "2100-01-31T23:00:00",
      "location": "location",
      "maxSubscriptions": 20,
      "modifiedOn": Any<String>,
      "quizId": 1,
      "remark": "remark",
      "rounds": null,
      "searchField": Any<String>,
      "shortId": Any<String>,
      "status": 5,
      "subscriptions": null,
      "title": "title",
    },
    "quizRunStepId": 1,
    "round": Object {
      "modifiedOn": Any<String>,
      "questions": null,
      "remark": "remark",
      "roundId": 1,
      "searchField": Any<String>,
      "shortId": Any<String>,
      "theme": "theme",
      "title": "title",
    },
    "scores": null,
    "status": 1,
  },
}
`;

exports[`should get question2 quizrunstep on Get (next) 1`] = `
Object {
  "message": null,
  "previousStep": Object {
    "answeredBy": Array [],
    "answers": null,
    "question": Object {
      "answers": Array [
        Object {
          "answerId": 1,
          "correct": true,
          "searchField": "trueanswer 1",
          "text": "answer 1",
        },
        Object {
          "answerId": 2,
          "correct": false,
          "searchField": "falseanswer 2",
          "text": "answer 2",
        },
      ],
      "modifiedOn": Any<String>,
      "questionId": 1,
      "remark": "remark",
      "rounds": Array [
        Object {
          "modifiedOn": Any<String>,
          "questions": null,
          "remark": "remark",
          "roundId": 1,
          "searchField": Any<String>,
          "shortId": Any<String>,
          "theme": "theme",
          "title": "title",
        },
      ],
      "scoring": Object {
        "scoringId": 1,
        "timeLimitSeconds": 0,
        "timeScoringInterval": 0,
        "type": 1,
        "weightCorrectAnswer": 1,
        "weightNoAnswer": 0,
      },
      "searchField": Any<String>,
      "shortId": Any<String>,
      "title": "title",
      "type": 2,
    },
    "quiz": Object {
      "date": "2100-01-31T23:00:00",
      "location": "location",
      "maxSubscriptions": 20,
      "modifiedOn": Any<String>,
      "quizId": 1,
      "remark": "remark",
      "rounds": null,
      "searchField": Any<String>,
      "shortId": Any<String>,
      "status": 5,
      "subscriptions": null,
      "title": "title",
    },
    "quizRunStepId": 1,
    "round": Object {
      "modifiedOn": Any<String>,
      "questions": null,
      "remark": "remark",
      "roundId": 1,
      "searchField": Any<String>,
      "shortId": Any<String>,
      "theme": "theme",
      "title": "title",
    },
    "scores": null,
    "status": 1,
  },
  "status": 1,
  "step": Object {
    "answeredBy": null,
    "answers": null,
    "question": Object {
      "answers": null,
      "modifiedOn": Any<String>,
      "questionId": 2,
      "remark": "remark",
      "rounds": Array [
        Object {
          "modifiedOn": Any<String>,
          "questions": null,
          "remark": "remark",
          "roundId": 1,
          "searchField": Any<String>,
          "shortId": Any<String>,
          "theme": "theme",
          "title": "title",
        },
      ],
      "scoring": Object {
        "scoringId": 2,
        "timeLimitSeconds": 0,
        "timeScoringInterval": 0,
        "type": 1,
        "weightCorrectAnswer": 1,
        "weightNoAnswer": 0,
      },
      "searchField": Any<String>,
      "shortId": Any<String>,
      "title": "title",
      "type": 2,
    },
    "quiz": Object {
      "date": "2100-01-31T23:00:00",
      "location": "location",
      "maxSubscriptions": 20,
      "modifiedOn": Any<String>,
      "quizId": 1,
      "remark": "remark",
      "rounds": null,
      "searchField": Any<String>,
      "shortId": Any<String>,
      "status": 5,
      "subscriptions": null,
      "title": "title",
    },
    "quizRunStepId": 2,
    "round": Object {
      "modifiedOn": Any<String>,
      "questions": null,
      "remark": "remark",
      "roundId": 1,
      "searchField": Any<String>,
      "shortId": Any<String>,
      "theme": "theme",
      "title": "title",
    },
    "scores": null,
    "status": 1,
  },
}
`;

exports[`should get question3 quizrunstep on Get (next) 1`] = `
Object {
  "message": null,
  "previousStep": Object {
    "answeredBy": Array [],
    "answers": Array [
      "answer 1",
      "answer 1",
    ],
    "question": null,
    "quiz": Object {
      "date": "2100-01-31T23:00:00",
      "location": "location",
      "maxSubscriptions": 20,
      "modifiedOn": Any<String>,
      "quizId": 1,
      "remark": "remark",
      "rounds": null,
      "searchField": Any<String>,
      "shortId": Any<String>,
      "status": 5,
      "subscriptions": null,
      "title": "title",
    },
    "quizRunStepId": 4,
    "round": Object {
      "modifiedOn": Any<String>,
      "questions": null,
      "remark": "remark",
      "roundId": 1,
      "searchField": Any<String>,
      "shortId": Any<String>,
      "theme": "theme",
      "title": "title",
    },
    "scores": Array [],
    "status": 3,
  },
  "status": 1,
  "step": Object {
    "answeredBy": null,
    "answers": null,
    "question": Object {
      "answers": null,
      "modifiedOn": Any<String>,
      "questionId": 3,
      "remark": "remark",
      "rounds": Array [
        Object {
          "modifiedOn": Any<String>,
          "questions": null,
          "remark": "remark",
          "roundId": 2,
          "searchField": Any<String>,
          "shortId": Any<String>,
          "theme": "theme",
          "title": "title",
        },
      ],
      "scoring": Object {
        "scoringId": 3,
        "timeLimitSeconds": 0,
        "timeScoringInterval": 0,
        "type": 1,
        "weightCorrectAnswer": 1,
        "weightNoAnswer": 0,
      },
      "searchField": Any<String>,
      "shortId": Any<String>,
      "title": "title",
      "type": 2,
    },
    "quiz": Object {
      "date": "2100-01-31T23:00:00",
      "location": "location",
      "maxSubscriptions": 20,
      "modifiedOn": Any<String>,
      "quizId": 1,
      "remark": "remark",
      "rounds": null,
      "searchField": Any<String>,
      "shortId": Any<String>,
      "status": 5,
      "subscriptions": null,
      "title": "title",
    },
    "quizRunStepId": 5,
    "round": Object {
      "modifiedOn": Any<String>,
      "questions": null,
      "remark": "remark",
      "roundId": 2,
      "searchField": Any<String>,
      "shortId": Any<String>,
      "theme": "theme",
      "title": "title",
    },
    "scores": null,
    "status": 1,
  },
}
`;

exports[`should get question4 quizrunstep on Get (current) 1`] = `
Object {
  "message": null,
  "previousStep": Object {
    "answeredBy": Array [],
    "answers": null,
    "question": Object {
      "answers": Array [
        Object {
          "answerId": 1,
          "correct": true,
          "searchField": "trueanswer 1",
          "text": "answer 1",
        },
        Object {
          "answerId": 2,
          "correct": false,
          "searchField": "falseanswer 2",
          "text": "answer 2",
        },
      ],
      "modifiedOn": Any<String>,
      "questionId": 1,
      "remark": "remark",
      "rounds": Array [
        Object {
          "modifiedOn": Any<String>,
          "questions": null,
          "remark": "remark",
          "roundId": 1,
          "searchField": Any<String>,
          "shortId": Any<String>,
          "theme": "theme",
          "title": "title",
        },
      ],
      "scoring": Object {
        "scoringId": 1,
        "timeLimitSeconds": 0,
        "timeScoringInterval": 0,
        "type": 1,
        "weightCorrectAnswer": 1,
        "weightNoAnswer": 0,
      },
      "searchField": Any<String>,
      "shortId": Any<String>,
      "title": "title",
      "type": 2,
    },
    "quiz": Object {
      "date": "2100-01-31T23:00:00",
      "location": "location",
      "maxSubscriptions": 20,
      "modifiedOn": Any<String>,
      "quizId": 1,
      "remark": "remark",
      "rounds": null,
      "searchField": Any<String>,
      "shortId": Any<String>,
      "status": 5,
      "subscriptions": null,
      "title": "title",
    },
    "quizRunStepId": 1,
    "round": Object {
      "modifiedOn": Any<String>,
      "questions": null,
      "remark": "remark",
      "roundId": 1,
      "searchField": Any<String>,
      "shortId": Any<String>,
      "theme": "theme",
      "title": "title",
    },
    "scores": null,
    "status": 1,
  },
  "status": 1,
  "step": Object {
    "answeredBy": Array [],
    "answers": null,
    "question": Object {
      "answers": Array [
        Object {
          "answerId": 3,
          "correct": true,
          "searchField": "trueanswer 1",
          "text": "answer 1",
        },
        Object {
          "answerId": 4,
          "correct": false,
          "searchField": "falseanswer 2",
          "text": "answer 2",
        },
      ],
      "modifiedOn": Any<String>,
      "questionId": 2,
      "remark": "remark",
      "rounds": Array [
        Object {
          "modifiedOn": Any<String>,
          "questions": null,
          "remark": "remark",
          "roundId": 1,
          "searchField": Any<String>,
          "shortId": Any<String>,
          "theme": "theme",
          "title": "title",
        },
      ],
      "scoring": Object {
        "scoringId": 2,
        "timeLimitSeconds": 0,
        "timeScoringInterval": 0,
        "type": 1,
        "weightCorrectAnswer": 1,
        "weightNoAnswer": 0,
      },
      "searchField": Any<String>,
      "shortId": Any<String>,
      "title": "title",
      "type": 2,
    },
    "quiz": Object {
      "date": "2100-01-31T23:00:00",
      "location": "location",
      "maxSubscriptions": 20,
      "modifiedOn": Any<String>,
      "quizId": 1,
      "remark": "remark",
      "rounds": null,
      "searchField": Any<String>,
      "shortId": Any<String>,
      "status": 5,
      "subscriptions": null,
      "title": "title",
    },
    "quizRunStepId": 2,
    "round": Object {
      "modifiedOn": Any<String>,
      "questions": null,
      "remark": "remark",
      "roundId": 1,
      "searchField": Any<String>,
      "shortId": Any<String>,
      "theme": "theme",
      "title": "title",
    },
    "scores": null,
    "status": 1,
  },
}
`;

exports[`should get question4 quizrunstep on Get (next) 1`] = `
Object {
  "message": null,
  "previousStep": Object {
    "answeredBy": Array [],
    "answers": null,
    "question": Object {
      "answers": Array [
        Object {
          "answerId": 5,
          "correct": true,
          "searchField": "trueanswer 1",
          "text": "answer 1",
        },
        Object {
          "answerId": 6,
          "correct": false,
          "searchField": "falseanswer 2",
          "text": "answer 2",
        },
      ],
      "modifiedOn": Any<String>,
      "questionId": 3,
      "remark": "remark",
      "rounds": Array [
        Object {
          "modifiedOn": Any<String>,
          "questions": null,
          "remark": "remark",
          "roundId": 2,
          "searchField": Any<String>,
          "shortId": Any<String>,
          "theme": "theme",
          "title": "title",
        },
      ],
      "scoring": Object {
        "scoringId": 3,
        "timeLimitSeconds": 0,
        "timeScoringInterval": 0,
        "type": 1,
        "weightCorrectAnswer": 1,
        "weightNoAnswer": 0,
      },
      "searchField": Any<String>,
      "shortId": Any<String>,
      "title": "title",
      "type": 2,
    },
    "quiz": Object {
      "date": "2100-01-31T23:00:00",
      "location": "location",
      "maxSubscriptions": 20,
      "modifiedOn": Any<String>,
      "quizId": 1,
      "remark": "remark",
      "rounds": null,
      "searchField": Any<String>,
      "shortId": Any<String>,
      "status": 5,
      "subscriptions": null,
      "title": "title",
    },
    "quizRunStepId": 5,
    "round": Object {
      "modifiedOn": Any<String>,
      "questions": null,
      "remark": "remark",
      "roundId": 2,
      "searchField": Any<String>,
      "shortId": Any<String>,
      "theme": "theme",
      "title": "title",
    },
    "scores": null,
    "status": 1,
  },
  "status": 1,
  "step": Object {
    "answeredBy": null,
    "answers": null,
    "question": Object {
      "answers": null,
      "modifiedOn": Any<String>,
      "questionId": 4,
      "remark": "remark",
      "rounds": Array [
        Object {
          "modifiedOn": Any<String>,
          "questions": null,
          "remark": "remark",
          "roundId": 2,
          "searchField": Any<String>,
          "shortId": Any<String>,
          "theme": "theme",
          "title": "title",
        },
      ],
      "scoring": Object {
        "scoringId": 4,
        "timeLimitSeconds": 0,
        "timeScoringInterval": 0,
        "type": 1,
        "weightCorrectAnswer": 1,
        "weightNoAnswer": 0,
      },
      "searchField": Any<String>,
      "shortId": Any<String>,
      "title": "title",
      "type": 2,
    },
    "quiz": Object {
      "date": "2100-01-31T23:00:00",
      "location": "location",
      "maxSubscriptions": 20,
      "modifiedOn": Any<String>,
      "quizId": 1,
      "remark": "remark",
      "rounds": null,
      "searchField": Any<String>,
      "shortId": Any<String>,
      "status": 5,
      "subscriptions": null,
      "title": "title",
    },
    "quizRunStepId": 6,
    "round": Object {
      "modifiedOn": Any<String>,
      "questions": null,
      "remark": "remark",
      "roundId": 2,
      "searchField": Any<String>,
      "shortId": Any<String>,
      "theme": "theme",
      "title": "title",
    },
    "scores": null,
    "status": 1,
  },
}
`;

exports[`should get scores round 1 quizrunstep on Get (next) 1`] = `
Object {
  "message": null,
  "previousStep": Object {
    "answeredBy": Array [],
    "answers": Array [
      "answer 1",
      "answer 1",
    ],
    "question": null,
    "quiz": Object {
      "date": "2100-01-31T23:00:00",
      "location": "location",
      "maxSubscriptions": 20,
      "modifiedOn": Any<String>,
      "quizId": 1,
      "remark": "remark",
      "rounds": null,
      "searchField": Any<String>,
      "shortId": Any<String>,
      "status": 5,
      "subscriptions": null,
      "title": "title",
    },
    "quizRunStepId": 3,
    "round": Object {
      "modifiedOn": Any<String>,
      "questions": null,
      "remark": "remark",
      "roundId": 1,
      "searchField": Any<String>,
      "shortId": Any<String>,
      "theme": "theme",
      "title": "title",
    },
    "scores": null,
    "status": 2,
  },
  "status": 1,
  "step": Object {
    "answeredBy": Array [],
    "answers": Array [
      "answer 1",
      "answer 1",
    ],
    "question": null,
    "quiz": Object {
      "date": "2100-01-31T23:00:00",
      "location": "location",
      "maxSubscriptions": 20,
      "modifiedOn": Any<String>,
      "quizId": 1,
      "remark": "remark",
      "rounds": null,
      "searchField": Any<String>,
      "shortId": Any<String>,
      "status": 5,
      "subscriptions": null,
      "title": "title",
    },
    "quizRunStepId": 4,
    "round": Object {
      "modifiedOn": Any<String>,
      "questions": null,
      "remark": "remark",
      "roundId": 1,
      "searchField": Any<String>,
      "shortId": Any<String>,
      "theme": "theme",
      "title": "title",
    },
    "scores": Array [],
    "status": 3,
  },
}
`;

exports[`should get scores round 2 quizrunstep on Get (next) 1`] = `
Object {
  "message": null,
  "previousStep": Object {
    "answeredBy": Array [],
    "answers": Array [
      "answer 1",
      "answer 1",
    ],
    "question": null,
    "quiz": Object {
      "date": "2100-01-31T23:00:00",
      "location": "location",
      "maxSubscriptions": 20,
      "modifiedOn": Any<String>,
      "quizId": 1,
      "remark": "remark",
      "rounds": null,
      "searchField": Any<String>,
      "shortId": Any<String>,
      "status": 5,
      "subscriptions": null,
      "title": "title",
    },
    "quizRunStepId": 7,
    "round": Object {
      "modifiedOn": Any<String>,
      "questions": null,
      "remark": "remark",
      "roundId": 2,
      "searchField": Any<String>,
      "shortId": Any<String>,
      "theme": "theme",
      "title": "title",
    },
    "scores": null,
    "status": 2,
  },
  "status": 1,
  "step": Object {
    "answeredBy": Array [],
    "answers": Array [
      "answer 1",
      "answer 1",
    ],
    "question": null,
    "quiz": Object {
      "date": "2100-01-31T23:00:00",
      "location": "location",
      "maxSubscriptions": 20,
      "modifiedOn": Any<String>,
      "quizId": 1,
      "remark": "remark",
      "rounds": null,
      "searchField": Any<String>,
      "shortId": Any<String>,
      "status": 5,
      "subscriptions": null,
      "title": "title",
    },
    "quizRunStepId": 8,
    "round": Object {
      "modifiedOn": Any<String>,
      "questions": null,
      "remark": "remark",
      "roundId": 2,
      "searchField": Any<String>,
      "shortId": Any<String>,
      "theme": "theme",
      "title": "title",
    },
    "scores": Array [],
    "status": 3,
  },
}
`;
